[options]
python_requires = >=3.6

[flake8]
max-line-length = 88
exclude = .tox,.git,docs
per-file-ignores =
    __init__.py:F401
select = C,E,F,W,B,B950
ignore = E203, E501, W503

[isort]
profile=black
known_first_party=johann

[mypy]
python_version = 3.6
check_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True

[tool:pytest]
testpaths=tests/

[coverage:run]
include = johann/*
omit = *tests*
