# Copyright (c) 2019-present, The Johann Authors. All Rights Reserved.
# Use of this source code is governed by a BSD-3-clause license that can
# be found in the LICENSE file. See the AUTHORS file for names of contributors.

[metadata]
version = attr: johann.__version__

[flake8]
max-line-length = 88
exclude = .tox,.git,docs
per-file-ignores =
    __init__.py:F401
select = C,E,F,W,B,B950
ignore = E203, E501, W503
# PLANNED: max_complexity = 10

[isort]
profile=black
known_first_party=johann

[mypy]
plugins = pydantic.mypy

ignore_missing_imports = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True
# PLANNED: disallow_untyped_defs = True

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[pylint.MESSAGES CONTROL]
# PLANNED: restore C0114-C0116, R0902, R0911, R0912, R0914, R0915, R1702
disable = C0103, C0114, C0115, C0116, C0301, C0412, E0401, R0201, R0801, R0903, R0902, R0911, R0912, R0913, R0914, R0915, R1702, R1705, R1710, R1720, R1723, R1724, W0511, W0613, W0703, W1510
